# flight-controller

./: .gitignore  .gitmodules  LICENSE.txt  README.md  platformio.ini
controller/: CMakeLists.txt  compile.sh  init.sh  load.sh  platformio.ini  proj.conf  setup.sh
controller/boards/: rpi_pico.conf  rpi_pico.overlay
controller/dts/bindings/: spi-bus.yaml
controller/extra_packages/flight_controller_msgs/: CMakeLists.txt  package.xml
controller/extra_packages/flight_controller_msgs/msg/: AltitudeTempPressure.msg  ControllerCommand.msg  HeightAboveGround.msg
controller/include/: FreeRTOSConfig.h  baro_manager.h  baro_manager.hpp  flight_controller.h  flight_controller.hpp  flight_controller_node.h  flight_controller_node.hpp  gpio_interface.h  gpio_output_interface.hpp  gps_manager.h  gps_manager.hpp  hcsr04_us.h  imu_manager.h  imu_manager.hpp  message_manager.h  pico_gpio_output_impl.hpp  pico_sleep_impl.hpp  pico_spi_bus.hpp  pico_spi_bus_impl.hpp  pico_timer_impl.hpp  ros_publisher.h  sleep_interface.hpp  spi_bus.h  spi_bus.hpp  test_printer.h  test_printer.hpp  timer_interface.hpp  uart_interface.hpp  ultrasonic_distance_manager.h  ultrasonic_distance_manager.hpp  zephyr_spi_bus.hpp
controller/lib/hcsr04_driver/: CMakeLists.txt  hcsr04_us.cpp  hcsr04_us.h
controller/lib/hcsr04_driver/include/: hcsr04_us.hpp
controller/lib/hcsr04_driver/src/: CMakeLists.txt  hcsr04_us.cpp  hcsr04_us.h
controller/lib/icm20948_driver/: CMakeLists.txt
controller/lib/icm20948_driver/include/: icm20948_imu.hpp
controller/lib/icm20948_driver/src/: icm20948_imu.cpp  icm20948_imu.h
controller/lib/message_protocol/src/: message_protocol.cpp
controller/lib/ms5611_driver/: CMakeLists.txt
controller/lib/ms5611_driver/include/: ms5611.hpp
controller/lib/ms5611_driver/src/: CMakeLists.txt  ms5611.cpp  ms5611.h
controller/lib/nmea_parser/: CMakeLists.txt
controller/lib/nmea_parser/include/: nmea_parser.hpp
controller/lib/nmea_parser/src/: nmea_parser.cpp
controller/messages/: CMakeLists.txt
controller/messages/msg/: Telemetry.msg
controller/src/: baro_manager.cpp  flight_controller.cpp  flight_controller_node.cpp  gps_manager.cpp  hcsr04_us.cpp  imu_manager.cpp  main.c  main.cpp  pico_gpio_output_impl.cpp  pico_sleep_impl.cpp  pico_spi_bus.cpp  pico_spi_bus_impl.cpp  pico_timer_impl.cpp  ros_publisher.cpp  test_printer.cpp  ultrasonic_distance_manager.cpp  ultrasonic_test.cpp  zephyr_spi_bus.cpp
include/: baro_manager.h  flight_controller.h  gps_manager.h  imu_manager.h  test_printer.h
lib/hcsr04_driver/: hcsr04_us.cpp  hcsr04_us.h
lib/icm20948_driver/src/: icm20948_imu.cpp  icm20948_imu.h
lib/message_protocol/: message_protocol.cpp
lib/message_protocol/src/: message_protocol.cpp  message_protocol.h
lib/ms5611_driver/src/: ms5611.cpp
src/: baro_manager.cpp  baro_manager.h  flight_controller.cpp  flight_controller.h  gps_manager.cpp  gps_manager.h  icm20948_imu.cpp  icm20948_imu.h  imu_manager.cpp  imu_manager.h  main.cpp  message_manager.cpp  test_printer.cpp
